--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<div class="post">
+<header>
+  <h1>Header</h1>
+</header>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<article class="page-content">
+  {{ content }}
+</article>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+<footer>
+  <p>Footer &copy; 2015</p>
+</footer>
