--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,9 @@
 ---
 layout: default
 ---
-<header>
-  <h1>Header</h1>
-</header>
-
-<article class="page-content">
+{% include header.html %}
+<section class="page-content container">
   {{ content }}
-</article>
+</section>
 
-<footer>
-  <p>Footer &copy; 2015</p>
-</footer>
+{% include footer.html %}
