--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,16 +9,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">{{site.title}}</a>
+        <a class="navbar-brand" href="{{ "/" | prepend: site.baseurl }}">{{site.title}}</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="{{ "/about/" | prepend: site.baseurl }}">About</a></li>
-          <li><a href="{{ "/episodes/" | prepend: site.baseurl }}">Episodes</a></li>
-          <li><a href="{{ "/contact/" | prepend: site.baseurl }}">Contact</a></li>
-          <li><a href="{{ "/blog/" | prepend: site.baseurl }}">Blog</a></li>
+          {% include links.html param="show-li" %}
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
