--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -25,3 +25,20 @@ nav.navbar-default {
     }
   }
 }
+
+h2 {
+
+  background-color: $primary-color;
+  color: $white;
+  font-weight:100;
+  padding: 0.5em 0 0.5em 1em;
+
+  background: -webkit-gradient(linear, left top, right top, from($white), to($primary-color));
+
+  background: -webkit-linear-gradient(left, $primary-color, $white);
+
+  background: -moz-linear-gradient(left, $primary-color, $white);
+  background: -ms-linear-gradient(left, $primary-color, $white);
+
+  background: -o-linear-gradient(left, $primary-color, $white);
+}
