Toggle episodes when clicked on season link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,10 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="{{ "/js/episodes.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/js/wow.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/js/app.js" | prepend: site.baseurl }}"></script>
+
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
