--- a/css/main.scss
+++ b/css/main.scss
@@ -2,4 +2,4 @@
 ---
 @charset "utf-8";
 
-@import "mixins", "theme", "common", "home", "about", "blog";
+@import "mixins", "theme", "common", "home", "about", "blog", "post";
