--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -42,3 +42,11 @@ h2 {
 
   background: -o-linear-gradient(left, $primary-color, $white);
 }
+
+footer {
+  margin-top: 2em;
+  text-align: center;
+  color: $primary-color;
+  font-size: 1.2em;
+  font-weight: 300;
+}
